# konofd-client-stub

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
launcher/: build.gradle.kts
launcher/src/main/: AndroidManifest.xml
launcher/src/main/res/values/: strings.xml  styles.xml  themes.xml
launcher/src/main/res/values-v21/: styles.xml
launcher/src/main/res/values-v28/: styles.xml
libmain/: .gitignore  Cargo.toml  README.md  rustfmt.toml
libmain/src/: and64_inline_hook.rs  asm.rs  jni_util.rs  lib.rs  maps.rs  off_thread.rs  public_key_processor.rs  util.rs  versions.rs
libmain/src/global_metadata/: editor.rs  error.rs  header.rs  metadata.rs  mod.rs  string_literal.rs
libmain/src/patch/: load_metadata_file.rs  manual_hook.rs  mod.rs  off_thread_scan.rs
unityLibrary/: build.gradle.kts
unityLibrary/src/main/: AndroidManifest.xml
unityLibrary/src/main/assets/: README.md
unityLibrary/src/main/java/com/adjust/sdk/: Adjust.java  AdjustAdRevenue.java  AdjustAttribution.java  AdjustConfig.java  AdjustEvent.java  AdjustEventFailure.java  AdjustEventSuccess.java  AdjustInstance.java  AdjustPlayStoreSubscription.java  AdjustSessionFailure.java  AdjustSessionSuccess.java  AdjustTestOptions.java  AdjustThirdPartySharing.java  LogLevel.java  OnAttributionChangedListener.java  (+6 more)
unityLibrary/src/main/java/com/appsflyer/: AppsFlyerConversionListener.java
unityLibrary/src/main/jniLibs/arm64-v8a/: README.md
unityLibrary/src/main/res/values/: freeformwindow.xml  ids.xml
unityLibrary/src/main/res/values-v30/: freeformwindow.xml
(+153 files in other folders)
