[package]
name = "konofd-stub-libmain"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
crate-type = ["cdylib"]

# My C version was 8 KiB...
[profile.release]
# strip = true
# lto = "fat"
# codegen-units = 1
panic = "abort"

[dependencies]
android_logger = "0.15.1"
jni-sys = "0.4.0"
libc = "0.2.174"
log = "0.4.27"
memmem = "0.1.1"
